syntax = "proto3" ;
option go_package = "proto/sysupdates" ;

message PowerOnDeviceRequest {
    string mac_addr = 1 ;

}
message PowerDeviceRequest {
    string host = 1 ;
    string username = 2 ;
    string privateKeyPath = 3 ;
}
message PowerDeviceResponse {
    string message = 1 ;
}

message ScheduleRequest {
    string time = 1 ; // "seconds minutes hour day_of_month month day_of_week " exemple "*/5 * * * * *"
    string script_path = 2 ; 
}
message ScheduleResponse {
    string message = 1 ;
    int32 id = 2 ;
}

message MetricsRequest {
    int32 device_id = 1;
}
message MetricsResponse {
    float cpu_usage = 1;
    float memory_usage = 2 ;
    uint64 network_bandwidth = 3 ;
}
enum LogType {
    System_logs = 0;
    Kernel_logs = 1;
    Auth_logs = 2 ;
}
message LogsRequest {
    LogType log_type =1;
    int32 device_id = 2 ;

}
message LogResponse {
    bytes log_file =1 ;
}
service Power_Mgmt {
    rpc PowerOn (PowerOnDeviceRequest) returns (PowerDeviceResponse) {} 
    rpc PowerOff (PowerDeviceRequest) returns (PowerDeviceResponse) {} 
    rpc Rebot (PowerDeviceRequest) returns (PowerDeviceResponse) {} 

}
service Script_Mgmt {
    rpc ScheduleScript (ScheduleRequest ) returns (ScheduleResponse) {} 


}
service Monitoring_mgmt {
    rpc GetMetrics (MetricsRequest) returns (MetricsResponse) {}
    rpc GetLogs (LogsRequest) returns (LogResponse) {}
    // usefull logs found /var/log/syslog , /var/log/kern.log , /var/log/auth.log
}